@@ -26,6 +26,7 @@ import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -61,7 +62,6 @@ import org.apache.hadoop.hbase.mapreduce.MutationSerialization;
 import org.apache.hadoop.hbase.mapreduce.ResultSerialization;
 import org.apache.hadoop.hbase.mapreduce.TableMapReduceUtil;
 import org.apache.hadoop.hbase.regionserver.BloomType;
-import org.apache.hadoop.hbase.regionserver.HStore;
 import org.apache.hadoop.hbase.regionserver.StoreFileWriter;
 import org.apache.hadoop.hbase.util.Bytes;
 import org.apache.hadoop.io.NullWritable;
@@ -79,6 +79,8 @@ import org.apache.phoenix.mapreduce.bulkload.TargetTableRefFunctions;
 import org.apache.phoenix.util.EnvironmentEdgeManager;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import edu.umd.cs.findbugs.annotations.SuppressWarnings;
 
 import org.apache.phoenix.thirdparty.com.google.common.annotations.VisibleForTesting;
 import org.apache.phoenix.thirdparty.com.google.common.collect.Maps;
@@ -128,7 +130,7 @@ public class MultiHfileOutputFormat extends FileOutputFormat<TableRowkeyPair, Ce
         final Configuration conf = context.getConfiguration();
         final FileSystem fs = outputdir.getFileSystem(conf);
      
-        final long maxsize = conf.getLong(HConstants.HREGION_MAX_FILESIZE,
+        final long maxsize = conf.getLongBytes(HConstants.HREGION_MAX_FILESIZE,
             HConstants.DEFAULT_MAX_FILE_SIZE);
         // Invented config.  Add to hbase-*.xml if other than default compression.
         final String defaultCompressionStr = conf.get("hfile.compression",
@@ -258,18 +260,17 @@ public class MultiHfileOutputFormat extends FileOutputFormat<TableRowkeyPair, Ce
               tempConf.setFloat(HConstants.HFILE_BLOCK_CACHE_SIZE_KEY, 0.0f);
               HFileContextBuilder contextBuilder = new HFileContextBuilder()
                                         .withCompression(compression)
-                                        .withChecksumType(HStore.getChecksumType(conf))
-                                        .withBytesPerCheckSum(HStore.getBytesPerChecksum(conf))
+                                        .withChecksumType(CompatUtil.getChecksumType(conf))
+                                        .withBytesPerCheckSum(CompatUtil.getBytesPerChecksum(conf))
                                         .withBlockSize(blockSize)
-                                        .withDataBlockEncoding(encoding);
-              CompatUtil.withComparator(contextBuilder, CellComparatorImpl.COMPARATOR);
+                                        .withDataBlockEncoding(encoding)
+                                        .withCellComparator(CellComparatorImpl.COMPARATOR);
               HFileContext hFileContext = contextBuilder.build();
 
                 StoreFileWriter.Builder storeFileWriterBuilder =
                         new StoreFileWriter.Builder(conf, new CacheConfig(tempConf), fs)
                                 .withOutputDir(familydir).withBloomType(bloomType)
                                 .withFileContext(hFileContext);
-              CompatUtil.withComparator(storeFileWriterBuilder, CellComparatorImpl.COMPARATOR);
               wl.writer = storeFileWriterBuilder.build();
 
               // join and put it in the writers map .
@@ -448,7 +449,7 @@ public class MultiHfileOutputFormat extends FileOutputFormat<TableRowkeyPair, Ce
                 continue;
             }
             try {
-                confValMap.put(URLDecoder.decode(familySplit[0], "UTF-8").getBytes(),
+                confValMap.put(URLDecoder.decode(familySplit[0], "UTF-8").getBytes(StandardCharsets.UTF_8),
                         URLDecoder.decode(familySplit[1], "UTF-8"));
             } catch (UnsupportedEncodingException e) {
                 // will not happen with UTF-8 encoding
@@ -479,6 +480,8 @@ public class MultiHfileOutputFormat extends FileOutputFormat<TableRowkeyPair, Ce
         TotalOrderPartitioner.setPartitionFile(conf, partitionsPath);
     }
 
+    @SuppressWarnings(value="EC_ARRAY_AND_NONARRAY",
+            justification="ImmutableBytesWritable DOES implement equals(byte])")
     private static void writePartitions(Configuration conf, Path partitionsPath,
             Set<TableRowkeyPair> tablesStartKeys) throws IOException {
         
